--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @keyframes flip {
+    0% {
+      background-color: transparent;
+      transform: perspective(200px) rotateY(0deg);
+    }
+
+    49.99999% {
+      background-color: transparent;
+      transform: perspective(200px) rotateY(90deg);
+    }
+
+    50% {
+      transform: perspective(200px) rotateY(-90deg);
+      border: none;
+    }
+
+    50.00001% {
+      border: none;
+    }
+
+    100% {
+      transform: perspective(200px) rotateY(0deg);
+    }
+  }
+}
