--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -26,5 +27,8 @@
     100% {
       transform: perspective(200px) rotateY(0deg);
     }
+  }
+  body {
+    font-family: 'Mitr', sans-serif;
   }
 }
